[DEV-77] jdk 버전 업데이트 (#348)
* chore: JDK 11 → 21 업그레이드

* chore: JDK 21 에 맞춰 import 수정

* refactor:  예외 처리 개선 및 요청 파라미터 누락 대응 추가

* test: QueryDSL varargs 체이닝 NPE 방지용 mock 스텁 추가

* refactor: 불필요한 import 제거 및 getFirst()로 메서드명 변경

* chore: ci-cd 테스트를 위해 push branches 를 현재 브랜치로 변경

* chore: 디스크 정리 및 네트워크 생성 개선 로그 추가

* chore: redis 접속 문제 해결

* chore: application.yml의 redis 설정 변경

* chore: deploy.yml 업데이트

* chore: reademe 프로필 업데이트

* chore: push branches 를 develop로 복구

* chore: sonar.projectKey 수정

* refactor: Collectors.toList()를 Stream.toList()로 변경